# musica

./: Dockerfile  README.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: rust-test.yml  tauri-publish.yml
src/: App.vue  counter.ts  main.ts  player_state.ts  tauri-types.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  dialog.rs  history.rs  main.rs  player.rs  storage.rs
src-tauri/src/commands/: dirs.rs  exec.rs  history.rs  library.rs  mod.rs  playback.rs  settings.rs
src-tauri/src/events/: mod.rs
src-tauri/src/settings/: mod.rs  types.rs
src-tauri/src/types/: format.rs  mod.rs  track.rs
src/assets/: main.css
src/assets/navbar/: styles.css
src/assets/player/: styles.css
src/assets/songlist/: styles.css
src/backend/: backend.ts  helpers.ts  types.ts
src/components/: NavBar.vue  Player.vue  SongList.vue  VolumeSlider.vue
src/router/: index.ts
src/stores/: player.ts  short_history.ts
src/views/: AboutView.vue  HistoryView.vue  HomeView.vue  LibraryView.vue  SettingsView.vue
